{{$NEXT}}

0.008     2015-11-18 12:58:37+11:00 Australia/Melbourne
 - Fix _http builder, get it passing tests again
 - Silence warning during croak when call fails without content

0.007     2015-11-18 08:51:27+11:00 Australia/Melbourne
 - API change: Add timeout option, remove http option

0.006     2015-11-16 09:34:58+11:00 Australia/Melbourne
 - API change: Return undef when KV key not found
 - API change: Return server meta from "blocking" endpoints
 - Make Event::fire properly async

0.005     2015-11-13 21:21:52+11:00 Australia/Melbourne
 - Support for async calls

0.004     2015-11-07 15:03:25+11:00 Australia/Melbourne
 - Fix accessor defaults (Moo requires them to be coderefs)
 - Don't use defined-or, gets things working on Perl 5.8

0.003     2015-11-06 16:36:14+11:00 Australia/Melbourne
 - Don't require feature(state), might get things working in Perl < 5.10

0.002     2015-11-05 23:08:14+11:00 Australia/Melbourne
 - Skip tests if Test::Consul can't start a consul instance

0.001     2015-11-05 12:56:16+11:00 Australia/Melbourne
 - First release