@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - Don't use defined-or, gets things working on Perl 5.8
 
 0.008     2015-11-18 12:58:37+11:00 Australia/Melbourne
  - Fix _http builder, get it passing tests again
